crates/criticalup-cli/tests/snapshots/cli__run__cargo_clippy_command_existing_packages-2.snap
---
source: crates/criticalup-cli/tests/cli/run.rs
expression: repr
---
exit: exit status: 0

stdout
------
success: cargo binary was called via run command
------

empty stderr
