crates/criticalup-cli/tests/snapshots/cli__run__help_message.snap
---
source: crates/criticalup-cli/tests/cli/run.rs
expression: repr
---
exit: exit status: 0

empty stdout

stderr
------
Run a command for a given toolchain

Usage:
  criticalup-test run [OPTIONS] <COMMAND>...

Arguments:
  <COMMAND>...
          Command with possible args to run

Options:
      --project <PROJECT>
          Path to the manifest `criticalup.toml`

  -v, --verbose...
          Enable debug logs, -vv for trace

      --log-level [<LOG_LEVEL>...]
          Tracing directives
          
          See https://docs.rs/tracing-subscriber/latest/tracing_subscriber/filter/struct.EnvFilter.html#directives

  -h, --help
          Print help (see a summary with '-h')
------
