crates/criticalup-cli/tests/snapshots/cli__run__simple_run_command_did_not_run_install.snap
---
source: crates/criticalup-cli/tests/cli/run.rs
expression: repr
---
exit: exit status: 1

empty stdout

stderr
------
error: An installation corresponding to your `criticalup.toml` was not found.
Please ensure your `criticalup.toml` contains what you expect, and then
run `criticalup install` to complete the installation.
    
------
