crates/criticalup-cli/tests/snapshots/cli__run__simple_run_command_existing_package.snap
---
source: crates/criticalup-cli/tests/cli/run.rs
expression: repr
---
exit: exit status: 0

stdout
------
success: sample binary was called via run command
------

empty stderr
