crates/criticalup-cli/tests/snapshots/cli__run__simple_run_command_manifest_not_found.snap
---
source: crates/criticalup-cli/tests/cli/run.rs
expression: repr
---
exit: exit status: 1

empty stdout

stderr
------
error: Failed to find canonical path for /path/to/criticalup.toml.
  caused by: No such file or directory (os error 2)
------
