crates/criticalup-cli/tests/snapshots/cli__run__simple_run_command_missing_package.snap
---
source: crates/criticalup-cli/tests/cli/run.rs
expression: repr
---
exit: exit status: 1

empty stdout

stderr
------
error: 'rustc' is not installed for this project.

Please make sure that the correct package for 'rustc' is listed in the packages section of your project's criticalup.toml and run 'criticalup install' command again.

------
